--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,11 +1,18 @@
+
+<div class="todo-panel">
 <mat-card>
   <mat-card-header>
-    <mat-card-title>My Todo List</mat-card-title>
+    <mat-card-title>Welcome Isiri Champu!! To-do List</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <mat-list>
       <mat-list-item *ngFor="let item of todoItems">
-        <mat-checkbox [(ngModel)]="item.checked">{{ item.text }}</mat-checkbox>
+
+        <mat-checkbox [(ngModel)]="item.checked">
+          <span [ngClass]="{'green-text': item.checked}">{{ item.text }}</span>
+        </mat-checkbox>
+        
+
       </mat-list-item>
     </mat-list>
   </mat-card-content>
@@ -24,3 +31,4 @@
     </button>
   </mat-card-actions>
 </mat-card>
+</div>
